2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/text-item.cc (interpret_string): insert encoding setting
	here

	* scm/framework-ps.scm (ps-font-command): remove feta/parmesan
	encoding kludge.

	* Documentation/user/changing-defaults.itely (Text encoding): node
	on encoding.

	* lily/lyric-engraver.cc (try_music): remove superfluous check.

	* lily/book-paper-def.cc (find_scaled_font): remove default
	encoding. This messes up font loading for feta and
	parmesan. Encoding should only be specified for running texts.

	* lily/modified-font-metric.cc (text_dimension): support coding
	scheme ""
	
2004-07-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/tie-engraver.cc (stop_translation_timestep): remember tie
	definition, so \override works as expected.

	* lily/measure-grouping-engraver.cc: clarify

2004-07-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/parser.yy (context_def_mod): remove \consistsend

	* lily/context-def.cc (instantiate): use Translator::must_be_last
	to determine engraver order.

	* lily/translator.cc (must_be_last): new function

	* scripts/convert-ly.py (conv): rule.

	* lily/bar-line.cc (print): return '() for height == 0.0 too.

2004-07-27  Heikki Junes  <hjunes@cc.hut.fi>

	* input/regression/{stanza-number,volta-multi-staff}.ly: fix docs.

2004-07-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/lily-guile.hh (scm_is_int): compat glue.

2004-07-25  Pedro Kroger  <kroeger@pedrokroeger.net>

	* input/regression/page-layout.ly: new file.

	* scm/paper.scm (set-paper-dimensions): Preliminary support for
	left and right margins.

	* Documentation/user/changing-defaults.itely (Page layout):
	Explain the leftmargin option.

2004-07-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/test/lyrics-melisma-variants.ly (texidoc): new file.

	* input/test/lyrics-melisma-faster.ly: new file.

	* lily/new-lyric-combine-music-iterator.cc (find_voice): allow
	change of melody by setting associatedVoice.
