@@ -101,7 +101,13 @@ Score_engraver::initialize ()
   Font_metric *fm = all_fonts_global->find_afm ("feta20");
   if (!fm)
     error (_f ("can't find `%s'", "feta20.afm")
-	   + "\n" +_ ("Fonts have not been installed properly.  Aborting"));
+	   + "\n" +_ ("Music font has not been installed properly.  Aborting"));
+
+  SCM pfa_path = ly_kpathsea_expand_path (scm_makfrom0str ("ecrm10.pfa"));
+  if (!ly_c_string_p (pfa_path))
+    error (_f ("can't find `%s'", "ecrm10.pfa")
+	   + "\n" +_f ("Install the ec-mftraced package from %s. Aborting",
+		       "http://lilypond.org/download/fonts/"));
    
 
   pscore_ = new Paper_score;
