@@ -1,5 +1,8 @@
 2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/score-engraver.cc (initialize): abort if ecrm10.pfa not
+	found.
+
 	* lily/text-item.cc (interpret_string): insert encoding setting
 	here
 
